test/visibility/except/typeExceptedButReceivedOne.good
typeExceptedButReceivedOne.chpl:5: In function 'main()'
typeExceptedButReceivedOne.chpl:6: error: unresolved call 'bar()'
